src/components/Contact/contact.css
.contact {
    min-width: calc(100vh-4rem);
    width: 100vw;
    max-width: 55rem;
    margin: 3.5rem auto;
    text-align: center;
    display: flex;
    flex-direction: column;
}

#contactdes {
    padding: 1rem;
    font-size: medium;
    font-weight: 300;;
}

.contactForm {
    margin: 1rem auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 90%;
    max-width: 50rem;
}

.name, .email, .msg {
    font-size: medium;
    width: 100%;
    max-width: 35rem;
    margin: 0.5rem;
    padding: 0.5rem 1rem;
    color: white;
    border: none;
    border-radius: 0.5rem;
    background: rgb(40, 40, 40);
}

.submitBtn {
    background: white;
    border: none;
    border-radius: 0.5rem;
    padding: 0.75rem 3.5rem;
}

.contact .contactForm .links {
    display: flex;
    gap: 1.6rem;
    margin-top: 1rem;
}

.contact .contactForm .links a {
    font-size: 1.4rem;
    background: white;
    color: gray;
    padding: 0.3rem;
    border-radius: 2rem;
    height: 2rem;
    width: 2rem;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    display: none;
}

@media screen and (max-width: 600px) {

    .contact {
        margin: 0 auto;
        background: red;
    }
    .contact #contactdes {
        font-size: 1.2rem;
    }

    .contact .contactForm .links a {
        display: flex;
    }
}


@media screen and (max-width: 1042px) {
    .contact #contactdes {
        font-size: 1.3rem;
    }

    .contact .contactForm .name {
        font-size: 1.2rem;
    }

    .contact .contactForm .email {
        font-size: 1.2rem;
    }

    .contact .contactForm .msg {
        font-size: 1.2rem;
    }

    .contact .contactForm .submitBtn {
        font-size: 1.2rem;
    }
}

    

